<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exampl.varvara.malifaux.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"

        />

    <Button
        android:id="@+id/newEvent"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/new_event"
        android:onClick="newEvent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorBackground"
        />

    <Button
        android:id="@+id/continueEvent"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newEvent"
        android:layout_alignBottom="@+id/newEvent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="continueEvent"
        android:text="@string/continue_event"
        android:textColor="@color/colorBackground" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ccc" />

</RelativeLayout>
