<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exampl.varvara.malifaux.Event">


    <Button
        android:id="@+id/addPlayer"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/go"
        android:layout_marginStart="10dp"
        android:text="@string/add_new_player"
        android:onClick="addPlayer"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorBackground"/>

    <Button
        android:id="@+id/go"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/go"
        android:onClick="startEvent"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorBackground"/>

    <TextView
        android:id="@+id/textView2"
        android:text="@string/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addPlayer"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addPlayer"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/numberPlayers"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/namberPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/spinner"
        android:layout_marginLeft="10dp"
        android:text="0"
        android:textColor="@color/colorPrimary"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/go"
        android:layout_below="@+id/go"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:entries="@array/rounds"
        android:textColor="@color/colorPrimary"/>

    <ListView
        android:id="@+id/list_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>
